# er-climate-monitor-sensors

./: .gitignore  README.md
dsl-sensor-generator/: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
dsl-sensor-generator/static/: style.css
scrapers/: .env  GenericScraper.py  pyproject.toml
scrapers/allertameteo/: .env  weekly_data.template
scrapers/utils/: timestamp.py
scrapers/weekly_data_scraping/: WeeklyScraper.py
sensor/: build_mockup_sensors.py  configuration.yaml  create_template.py  requirements.txt  sensor_template.py
